<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JacocoDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="headline">Jacoco Demo</string>
    <string name="num1">Number One</string>
    <string name="num2">Number Two</string>
    <string name="add">Add</string>
    <string name="result">Result</string>

</resources>
