<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:text="@string/headline"
        android:id="@+id/headline"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/num1"
        android:hint="@string/num1"
        android:layout_below="@id/headline"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/num2"
        android:hint="@string/num2"
        android:layout_below="@id/num1"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/add"
        android:text="@string/add"
        android:textSize="25sp"
        android:layout_below="@id/num2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <TextView
        android:id="@+id/result"
        android:text="@string/result"
        android:textSize="25sp"
        android:layout_below="@id/add"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</RelativeLayout>
